vendor/salesforce/force-app/main/default/objects/Case/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <label>External ID</label>
    <description>Hotel DB service request UUID for integration idempotency</description>
    <externalId>true</externalId>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
</CustomField>